[metadata]
name = {{cookiecutter.pypi_name}}
description = {{cookiecutter.description}}
author = {{cookiecutter.copyright_holder}}
author_email = sqre-admin@lists.lsst.org
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT
# url = https://{{cookiecutter.pypi_name}}.lsst.io
project_urls =
    Source code = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.pypi_name}}
    Issue tracker = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.pypi_name}}/issues
    # Change log = https://{{cookiecutter.pypi_name}}.lsst.io/changelog.html
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
keywords =
    rubinobs
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
# install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage[toml]
    mypy
    pre-commit
    pytest
    pytest-asyncio
    # documentation
    documenteer
    lsst-sphinx-bootstrap-theme
    sphinx-automodapi
    sphinx-prompt
    myst-parser
    markdown-it-py[linkify]
